welcome.lessons.welcome.summative.Moria.scala.code
def trouverBiscuit(){
  setDirection(direction.East)
  while (!estSurBiscuit()){
    avance()
  }
  prendBiscuit()
  setDirection(Direction.West)
  while (!estSurBiscuit()){
    avance()
  }
  poseBiscuit()
  setDirection(Direction.East)
  avance()
}

def sortie(): Boolean={
  if (estFacemur())
  	return true
  return false
}


while (sortie()==false) {
  trouverBiscuit()
}
setDirection(Direction.South)
avance()
setDirection(Direction.West)
avance()